# coqui-ai-coqpit

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.py
.github/actions/setup-uv/: action.yml
.github/workflows/: codeql-analysis.yml  main.yml  pypi-release.yml
coqpit/: __init__.py  coqpit.py
tests/: test_copying.py  test_init_from_dict.py  test_merge_configs.py  test_nested_configs.py  test_parse_argparse.py  test_parse_known_argparse.py  test_relaxed_parse_known_argparse.py  test_serialization.json  test_serialization.py  test_simple_config.py  test_utils.py
