[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["coqpit*"]

[project]
name = "coqpit"
version = "0.0.17"
description = "Simple (maybe too simple), light-weight config management through python data-classes."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Eren Gölge", email = "egolge@coqui.ai"}
]
maintainers = [
    {name = "Enno Hermann", email = "enno.hermann@gmail.com"}
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = []

[tool.uv]
dev-dependencies = [
    "coverage>=7",
    "pre-commit>=3",
    "pytest>=8",
    "ruff==0.6.9",
]

[project.urls]
Repository = "https://github.com/idiap/coqui-ai-coqpit"
Issues = "https://github.com/idiap/coqui-ai-coqpit/issues"

[tool.ruff]
target-version = "py39"
line-length = 120
lint.extend-select = ["I", "B", "W", "A", "PLC", "PLE"]

[tool.ruff.lint.pydocstyle]
convention = "google"
